

complex = executable('complex',
  sources: 'complex.cpp',
  link_with:realpaver_lib,
  include_directories: ['../src']+incdir,
  dependencies: deps_lib
)

work = executable('work',
  sources: 'work.cpp',
  link_with:realpaver_lib,
  include_directories: ['../src']+incdir,
  dependencies: deps_lib
)
